core/primitives/src/runtime/snapshots/near_primitives__runtime__config_store__tests__testnet_42.json.snap
---
source: core/primitives/src/runtime/config_store.rs
expression: config_view
---
{
  "storage_amount_per_byte": "10000000000000000000",
  "transaction_costs": {
    "action_receipt_creation_config": {
      "send_sir": 108059500000,
      "send_not_sir": 108059500000,
      "execution": 108059500000
    },
    "data_receipt_creation_config": {
      "base_cost": {
        "send_sir": 4697339419375,
        "send_not_sir": 4697339419375,
        "execution": 4697339419375
      },
      "cost_per_byte": {
        "send_sir": 59357464,
        "send_not_sir": 59357464,
        "execution": 59357464
      }
    },
    "action_creation_config": {
      "create_account_cost": {
        "send_sir": 99607375000,
        "send_not_sir": 99607375000,
        "execution": 99607375000
      },
      "deploy_contract_cost": {
        "send_sir": 184765750000,
        "send_not_sir": 184765750000,
        "execution": 184765750000
      },
      "deploy_contract_cost_per_byte": {
        "send_sir": 6812999,
        "send_not_sir": 6812999,
        "execution": 6812999
      },
      "function_call_cost": {
        "send_sir": 2319861500000,
        "send_not_sir": 2319861500000,
        "execution": 2319861500000
      },
      "function_call_cost_per_byte": {
        "send_sir": 2235934,
        "send_not_sir": 2235934,
        "execution": 2235934
      },
      "transfer_cost": {
        "send_sir": 115123062500,
        "send_not_sir": 115123062500,
        "execution": 115123062500
      },
      "stake_cost": {
        "send_sir": 141715687500,
        "send_not_sir": 141715687500,
        "execution": 102217625000
      },
      "add_key_cost": {
        "full_access_cost": {
          "send_sir": 101765125000,
          "send_not_sir": 101765125000,
          "execution": 101765125000
        },
        "function_call_cost": {
          "send_sir": 102217625000,
          "send_not_sir": 102217625000,
          "execution": 102217625000
        },
        "function_call_cost_per_byte": {
          "send_sir": 1925331,
          "send_not_sir": 1925331,
          "execution": 1925331
        }
      },
      "delete_key_cost": {
        "send_sir": 94946625000,
        "send_not_sir": 94946625000,
        "execution": 94946625000
      },
      "delete_account_cost": {
        "send_sir": 147489000000,
        "send_not_sir": 147489000000,
        "execution": 147489000000
      }
    },
    "storage_usage_config": {
      "num_bytes_account": 100,
      "num_extra_bytes_record": 40
    },
    "burnt_gas_reward": [
      3,
      10
    ],
    "pessimistic_gas_price_inflation_ratio": [
      103,
      100
    ]
  },
  "wasm_config": {
    "ext_costs": {
      "base": 264768111,
      "contract_loading_base": 35445963,
      "contract_loading_bytes": 216750,
      "read_memory_base": 2609863200,
      "read_memory_byte": 3801333,
      "write_memory_base": 2803794861,
      "write_memory_byte": 2723772,
      "read_register_base": 2517165186,
      "read_register_byte": 98562,
      "write_register_base": 2865522486,
      "write_register_byte": 3801564,
      "utf8_decoding_base": 3111779061,
      "utf8_decoding_byte": 291580479,
      "utf16_decoding_base": 3543313050,
      "utf16_decoding_byte": 163577493,
      "sha256_base": 4540970250,
      "sha256_byte": 24117351,
      "keccak256_base": 5879491275,
      "keccak256_byte": 21471105,
      "keccak512_base": 5811388236,
      "keccak512_byte": 36649701,
      "ripemd160_base": 853675086,
      "ripemd160_block": 680107584,
      "ed25519_verify_base": 210000000000,
      "ed25519_verify_byte": 9000000,
      "ecrecover_base": 3365369625000,
      "log_base": 3543313050,
      "log_byte": 13198791,
      "storage_write_base": 64196736000,
      "storage_write_key_byte": 70482867,
      "storage_write_value_byte": 31018539,
      "storage_write_evicted_byte": 32117307,
      "storage_read_base": 56356845750,
      "storage_read_key_byte": 30952533,
      "storage_read_value_byte": 5611005,
      "storage_remove_base": 53473030500,
      "storage_remove_key_byte": 38220384,
      "storage_remove_ret_value_byte": 11531556,
      "storage_has_key_base": 54039896625,
      "storage_has_key_byte": 30790845,
      "storage_iter_create_prefix_base": 0,
      "storage_iter_create_prefix_byte": 0,
      "storage_iter_create_range_base": 0,
      "storage_iter_create_from_byte": 0,
      "storage_iter_create_to_byte": 0,
      "storage_iter_next_base": 0,
      "storage_iter_next_key_byte": 0,
      "storage_iter_next_value_byte": 0,
      "touching_trie_node": 16101955926,
      "read_cached_trie_node": 2280000000,
      "promise_and_base": 1465013400,
      "promise_and_per_promise": 5452176,
      "promise_return": 560152386,
      "validator_stake_base": 911834726400,
      "validator_total_stake_base": 911834726400,
      "contract_compile_base": 0,
      "contract_compile_bytes": 0,
      "alt_bn128_g1_multiexp_base": 713000000000,
      "alt_bn128_g1_multiexp_element": 320000000000,
      "alt_bn128_g1_sum_base": 3000000000,
      "alt_bn128_g1_sum_element": 5000000000,
      "alt_bn128_pairing_check_base": 9686000000000,
      "alt_bn128_pairing_check_element": 5102000000000
    },
    "grow_mem_cost": 1,
    "regular_op_cost": 3856371,
    "limit_config": {
      "max_gas_burnt": 200000000000000,
      "max_stack_height": 16384,
      "stack_limiter_version": 0,
      "initial_memory_pages": 1024,
      "max_memory_pages": 2048,
      "registers_memory_limit": 1073741824,
      "max_register_size": 104857600,
      "max_number_registers": 100,
      "max_number_logs": 100,
      "max_total_log_length": 16384,
      "max_total_prepaid_gas": 300000000000000,
      "max_actions_per_receipt": 100,
      "max_number_bytes_method_names": 2000,
      "max_length_method_name": 256,
      "max_arguments_length": 4194304,
      "max_length_returned_data": 4194304,
      "max_contract_size": 4194304,
      "max_transaction_size": 4194304,
      "max_length_storage_key": 4194304,
      "max_length_storage_value": 4194304,
      "max_promises_per_function_call_action": 1024,
      "max_number_input_data_dependencies": 128,
      "wasmer2_stack_limit": 102400,
      "account_id_validity_rules_version": 0
    }
  },
  "account_creation_config": {
    "min_allowed_top_level_account_length": 32,
    "registrar_account_id": "registrar"
  }
}
